portfolio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  labels:
    app: portfolio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio-container
        image: northamerica-northeast2-docker.pkg.dev/myprotfolio-472419/portfoliorepo/frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  labels:
    app: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80      
      targetPort: 80
  type: ClusterIP
